samples/errors/types/argument.lif
function foo(p: Int) {}

foo("Hello");
